--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-axios": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-player": "^1.12.0",
     "react-scripts": "3.0.1",
     "semantic-ui-react": "^0.88.0",
     "styled-components": "^4.3.2"
